--- a/torrentapp/templates/base.html
+++ b/torrentapp/templates/base.html
@@ -6,9 +6,9 @@
         <title>Torrent Workshops</title>
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="/static/bootstrap.min.css">
+        <link rel="stylesheet" href="/static/main.css">
+        <!--<link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans&subset=latin,latin-ext" rel="stylesheet" type="text/css">-->
     </head>
     <body>
 
