--- a/torrentapp/templates/base.html
+++ b/torrentapp/templates/base.html
@@ -21,7 +21,7 @@
           <nav id="bs-navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="/">Part 1. Tracker</a>
-              <li><a href="/">Part 2. Protocol</a>
+              <li><a href="/part2-download">Part 2. Protocol</a>
             </ul>
           </nav>
 
