--- a/torrentapp/templates/part1.html
+++ b/torrentapp/templates/part1.html
@@ -39,7 +39,7 @@
     <ul>
       <li>use requests Python module
       <li>request should have the following format:
-        <code>{{ tracker_url }}?info_hash=[raw info hash]&peer_id=[raw peer id]&uploaded=0&downloaded=0&left=[number of bytes left]&compact=1&key=[key]&port=6969&event=started</code>
+        <code>{{ tracker_url }}?info_hash=[raw info hash]&peer_id=[raw peer id]&uploaded=0&downloaded=0&left=[number of bytes left]&compact=1&port=6969&event=started</code>
       <li>response is an bencoded dictionary
       <li><a href="https://wiki.theory.org/BitTorrent_Tracker_Protocol">tracker protocol on theory.org</a>
     </ul>
