--- a/torrentapp/templates/base.html
+++ b/torrentapp/templates/base.html
@@ -22,6 +22,7 @@
             <ul class="nav navbar-nav">
               <li><a href="/">Part 1. Tracker</a>
               <li><a href="/part2-download">Part 2. Protocol</a>
+              <li><a href="/part3-streaming">Part 3. Streaming</a>
             </ul>
           </nav>
 
