--- a/torrentapp/templates/part2.html
+++ b/torrentapp/templates/part2.html
@@ -24,6 +24,8 @@
 
 <a href="/log" rol="button" class="btn btn-primary">View log</a>
 <a href="/lorem.txt.torrent" rol="button" class="btn btn-primary">Download torrent</a>
+<a href="/2lorem.txt.torrent" rol="button" class="btn btn-primary">Download harder torrent</a>
+
 {% else %}
 <a href="/accounts/login" rol="button" class="btn btn-primary">Login</a>
 {% endif %}
