--- a/torrentapp/templates/part3.html
+++ b/torrentapp/templates/part3.html
@@ -16,7 +16,9 @@
 <hr>
 
 <a href="/log" rol="button" class="btn btn-primary">View log</a>
-<a href="/2Xbox-4.avi.torrent" rol="button" class="btn btn-primary">Download torrent for streaming</a>
+<a href="/Xbox-4.avi.torrent" rol="button" class="btn btn-primary">Download torrent for streaming</a>
+<hr>
+<a href="/2Xbox-4.avi.torrent" rol="button" class="btn btn-primary">Download harder torrent for streaming (may not work)</a>
 
 {% else %}
 <a href="/accounts/login" rol="button" class="btn btn-primary">Login</a>
